--- a/Assignment 2.Rmd
+++ b/Assignment 2.Rmd
@@ -1,4 +1,4 @@
-# Assignment 2 - Social Network Analysis
+D# Assignment 2 - Social Network Analysis
 
 ## Part I
 Start by installing the "igraph" package. Once you have installed igraph, load the package.
@@ -8,7 +8,10 @@ Now upload the data file "discipline-data.csv" as a data frame called "D1". Each
 Before you proceed, you will need to change the data type of the student id variable. Since it is a number R will automatically think it is an integer and code it as such (look at the list of variables by clicking on the data frame arrow in the Data pane. Here you will see the letters "int"" next to the stid variable, that stands for integer). However, in this case we are treating the variable as a category, there is no numeric meaning in the variable. So we need to change the format to be a category, what R calls a "factor". We can do this with the following code:
 
 ```{r}
-D1$stid <- as.factor(D1$stid)
+D1 <- read.csv("discipline-data.csv")
+D1$stid <- as.factor(D1$stid) #changes the int type of the student id variable from numeric to categorical.
+
+
 ```
 
 igraph requires data to be in a particular structure. There are several structures that it can use but we will be using a combination of an "edge list" and a "vertex list". As you might imagine the edge list contains a list of all the relationships between students and teachers and any characteristics of those edges that we might be interested in. There are two essential variables in the edge list a "from" variable and a "to" variable that descibe the relationships between vertices (a disciplinary action is given "from" and teacher "to" a student). While the vertix list contains all the characteristics of those vertices, in our case gender and major.
@@ -20,7 +23,7 @@ First we will isolate the variables that are of interest: tid and stid
 ```{r}
 library(dplyr)
 
-D2 <- dplyr::select(D1, tid, stid)
+D2 <- dplyr::select(D1, tid, stid) #isolating the variables tid and stid using DPLYR
 ```
 
 Since our data represnts every time a teacher sends a student to the principal there are multiple rows when the same teacher sends the same student. We want to collapse these into a single row, with a variable that shows how many times a teacher-student pair appears.
@@ -86,9 +89,102 @@ plot(g,layout=layout.fruchterman.reingold, vertex.color=VERTEX$gender, edge.widt
 
 In Part II your task is to [look up](http://igraph.org/r/) in the igraph documentation and create a graph that sizes the student vertices in terms of the number of disciplinary actions they have recieved, and the teachers in terms of the number of disciplinary actions they have given out.
 
+```{r}
+#Generating the Number of Disciplinary Actions given by the Teacher
+tcount <- group_by(EDGE, from) %>% summarise(sum(count))
+names(tcount) <- c("id", "count")
+
+#Generating the Number of Disciplinary Actions received by the Student
+scount <- group_by(EDGE, to) %>% summarise(sum(count))
+names(scount) <- c("id", "count")
+
+
+#Generating the VERTEX Dataframe, Binding tcount and scount
+discipline <- bind_rows(tcount, scount)
+VERTEX <- full_join(VERTEX, discipline, by = "id")
+
+#Creating the iGraph Object and Plotting - Setting size of Vertices based on count of VERTEX df
+g <- graph.data.frame(EDGE, directed = TRUE, vertices=VERTEX)
+plot(g, layout = layout.fruchterman.reingold, vertex.color = as.factor(VERTEX$gender), edge.arrow.size = 0.3, edge.width = EDGE$count, vertex.size = VERTEX$count*3)
+
+
+```
+
 ## Part III
 
 Now practice with data from our class. Please create a **person-network** with the data set hudk4050-classes.csv. To create this network you will need to create a person-class matrix using the tidyr functions and then create a person-person matrix using `t()`. You will then need to plot a matrix rather than a data frame using igraph.
 
 Once you have done this, also [look up](http://igraph.org/r/) how to generate the following network metrics: betweeness centrality and dregree. **Who is the most central person in the network?**
+```{r}
+library(tidyr)
+library(dplyr)
+peer <- read.csv("HUDK4050-2018-classes.csv")
+
+#Only select relevant columns and cleanup
+peer <- peer[15:22]
+peer <- peer[-2,]
+colnames(peer) <- c("First Name", "Last Name", "Class 1", "Class 2", "Class 3", "Class 4", "Class 5", "Class 6")
+peer <- peer[-1,]
+#Removing Double Stephanie in Data
+peer <- peer[-1,]
+
+#Removing all instances of HUDK 4050
+peer[peer == "HUDK 4050"] <- NA
+peer[peer == "HUDK4050"] <- NA
+
+#Removing Last Name Column for Easier Use since no Repeated First Names
+peer <- peer[,-2]
+
+#Setting Empty Values into Null
+peer[peer == ""] <- NA
+
+#Removing Class 6 (empty) 
+peer <- peer[, -7]
+
+#Gathering the Data into an Edge List
+EdgePeer <- gather(peer, "Class", "To", 2:6)
+
+#Removing Class Column from Edge List
+EdgePeer <- EdgePeer[, -2]
+
+#Renaming Edge List to "From", "To" format
+names(EdgePeer) <- c("From", "To")
+
+#Removing NA Values
+EdgePeer <- EdgePeer[complete.cases(EdgePeer),]
+
+#Creating a Graph Object from Edge List
+EdgePeer <- as.matrix(EdgePeer)
+g1 <- graph.data.frame(EdgePeer, directed = TRUE)
+
+#Creating a person-class matrix
+Peermatrix <- as.matrix(as_adjacency_matrix(g1))
+Peermatrix <- Peermatrix[, -1:-37]
+
+#Transforming the Matrix
+Peermatrix2 <- t(Peermatrix)
+
+#Creating person-person matrix
+Peermatrix3 <- Peermatrix %*% Peermatrix2
+Peermatrix4 <- Peermatrix3[1:37, 1:37]
+diag(Peermatrix4) <- NA
+
+#Creating the Graph Object
+g3 <- graph.adjacency(Peermatrix4, weighted = T, mode = "undirected")
+g3 <- simplify(g3, remove.multiple = TRUE, remove.loops = TRUE)
+
+#Modifying Visualization Attributes
+V(g3)$label.color <- rgb(0, 0, 0.2, 0.8)
+V(g3)$frame.color <- NA
+plot(g3, layout = layout_nicely)
+
+#Degree
+degree(g3)
+#Xixuan has the highest degree of 13
+
+#Betweeness
+betweenness(g3)
+#Elliot has the highest betweenness of 97.0
+
+```
 
